Fix content size jumping

--- a/new-site/src/components/layout.scss
+++ b/new-site/src/components/layout.scss
@@ -177,6 +177,7 @@ body {
 }
 
 .main-content {
+  box-sizing: border-box;
   overflow: visible;
   width: 100%;
 }
